<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/product_all_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.jingdong.app.mall">
    
    <RelativeLayout android:id="@id/product_list_top_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        
        <RelativeLayout android:id="@id/product_list_search_layout" android:background="@drawable/android_title_bg_new" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentTop="true">
            <AutoCompleteTextView android:textSize="15.0sp" android:textColor="@color/black" android:textColorHint="@color/color_ffcbcdd4" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/product_list_search_et" android:background="@drawable/search_box" android:paddingLeft="10.0dip" android:paddingRight="20.0dip" android:focusable="true" android:nextFocusLeft="@id/home_search_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:hint="@string/homeActivity_autoComplete" android:singleLine="true" android:completionThreshold="1" android:layout_toLeftOf="@id/product_list_search_filter_but" android:layout_centerVertical="true" android:inputType="text" android:dropDownWidth="fill_parent" android:imeOptions="actionSearch" android:imeActionId="@id/home_search_button" />
            <ImageButton android:id="@id/product_list_search_clean" android:background="@drawable/android_home_search_clean" android:visibility="gone" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="8.0dip" android:scaleType="centerInside" android:layout_toLeftOf="@id/product_list_search_filter_but" android:layout_centerVertical="true" />
            <ImageButton android:id="@id/product_list_search_voice" android:background="@drawable/app_icon_voice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:scaleType="centerInside" android:layout_toLeftOf="@id/product_list_search_filter_but" android:layout_centerVertical="true" />
            <Button android:layout_gravity="center_vertical" android:id="@id/product_list_search_filter_but" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/android_search_icon" android:text="@string/product_filter" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/title_right_button2" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/search_recommend_shop_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="45.0dip">
    
            <RelativeLayout android:id="@id/sort_buttons_layout" android:layout_width="fill_parent" android:layout_height="39.299988dip" android:layout_below="@id/search_recommend_shop_layout">
                <LinearLayout android:id="@id/sort_buttons" android:background="@drawable/tab_bg" android:paddingTop="1.0dip" android:paddingBottom="1.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="39.299988dip" android:weightSum="1.0">
                    <RelativeLayout android:id="@id/sort_button_price" android:background="@drawable/sort_button_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25">
                        <TextView android:textSize="14.0sp" android:textColor="@color/sort_button_text_color" android:id="@id/sort_button_price_1" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_button_price" android:layout_centerInParent="true" />
                        <View android:id="@id/sort_button_price_arrow" android:background="@drawable/sort_button_price_none" android:layout_width="6.0dip" android:layout_height="10.699982dip" android:layout_toLeftOf="@id/sort_button_price_1" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <View android:layout_gravity="center_vertical" android:background="@drawable/tab_divider" android:layout_width="2.0dip" android:layout_height="23.299988dip" />
                    <RelativeLayout android:id="@id/sort_button_sales" android:background="@drawable/sort_button_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25">
                        <TextView android:textSize="14.0sp" android:textColor="@color/sort_button_text_color" android:id="@id/sort_button_sales_1" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_button_sell" android:layout_centerInParent="true" />
                    </RelativeLayout>
                    <View android:layout_gravity="center_vertical" android:background="@drawable/tab_divider" android:layout_width="2.0dip" android:layout_height="23.299988dip" />
                    <RelativeLayout android:id="@id/sort_button_comment" android:background="@drawable/sort_button_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25">
                        <TextView android:textSize="14.0sp" android:textColor="@color/sort_button_text_color" android:id="@id/sort_button_comment_1" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_button_comment" android:layout_centerInParent="true" />
                    </RelativeLayout>
                    <View android:layout_gravity="center_vertical" android:background="@drawable/tab_divider" android:layout_width="2.0dip" android:layout_height="23.299988dip" />
                    <RelativeLayout android:id="@id/sort_button_add_time" android:background="@drawable/sort_button_bg" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.25">
                        <TextView android:textSize="14.0sp" android:textColor="@color/sort_button_text_color" android:id="@id/sort_button_add_time_1" android:padding="5.0dip" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sort_button_time" android:layout_centerInParent="true" />
                    </RelativeLayout>
                </LinearLayout>
                
            </RelativeLayout>
        </LinearLayout>
       
    </RelativeLayout>
    <ProgressBar android:id="@id/product_list_loading_pb" android:visibility="gone" android:layout_centerInParent="true" style="@style/progress_loading" />
    <include android:id="@id/loading_error_tips_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/product_list_top_layout" layout="@layout/loading_error_tips" />
    <!-- <ImageButton android:id="@id/switch_grid_list" android:background="@*android:color/transparent" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/android_productlist_top_grid" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" /> -->
    <View android:background="@drawable/tab_bg_shadow" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_below="@id/product_list_top_layout" />
    <TextView android:textColor="#ffffffff" android:id="@id/product_list_float_count_num" android:background="@drawable/home_cursor_layout_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <LinearLayout android:id="@id/product_list_search_float_layout" android:background="@drawable/search_list_normal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/product_list_top_layout">
        <ListView android:layout_gravity="top" android:id="@id/product_list_search_lv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="@android:color/transparent" android:divider="@drawable/filter_spider_line" />
    </LinearLayout>
</RelativeLayout>